--- a/newslyapp/src/index.html
+++ b/newslyapp/src/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
 </head>
 
-<body>
+<body class="theme">
   <app-root></app-root>
 </body>
 
